<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.acxiom</groupId>
    <artifactId>email-audit-engine</artifactId>
    <version>1.0-SNAPSHOT</version>
    <profiles>
        <profile>
            <id>windows</id>
            <activation><os><family>windows</family></os></activation>
            <properties><javafx.platform>win</javafx.platform></properties>
        </profile>
        <profile>
            <id>mac</id>
            <activation><os><family>mac</family></os></activation>
            <properties><javafx.platform>mac</javafx.platform></properties>
        </profile>
        <profile>
            <id>linux</id>
            <activation><os><family>unix</family></os></activation>
            <properties><javafx.platform>linux</javafx.platform></properties>
        </profile>
    </profiles>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <playwright.version>1.49.0</playwright.version>
        <testng.version>7.10.2</testng.version>
        <extentreports.version>5.1.2</extentreports.version>
        <jackson.version>2.18.2</jackson.version>
        <slf4j.version>2.0.16</slf4j.version>
        <logback.version>1.5.16</logback.version>
        <jsoup.version>1.18.3</jsoup.version>
        <commons-io.version>2.18.0</commons-io.version>
        <commons-lang3.version>3.17.0</commons-lang3.version>
        <languagetool.version>6.4</languagetool.version>
        <axe-playwright.version>4.10.0</axe-playwright.version>
        <javafx.version>21.0.2</javafx.version>
        <maven-compiler.version>3.13.0</maven-compiler.version>
        <maven-surefire.version>3.5.2</maven-surefire.version>
        <maven-assembly.version>3.7.1</maven-assembly.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.microsoft.playwright</groupId>
            <artifactId>playwright</artifactId>
            <version>${playwright.version}</version>
        </dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
        </dependency>
        <dependency>
	  <groupId>org.openjfx</groupId>
	  <artifactId>javafx-controls</artifactId>
	  <version>${javafx.version}</version>
	  <classifier>${javafx.platform}</classifier>
	</dependency>
 
	<dependency>
	  <groupId>org.openjfx</groupId>
	  <artifactId>javafx-fxml</artifactId>
	  <version>${javafx.version}</version>
	  <classifier>${javafx.platform}</classifier>
	</dependency>
        <dependency>
            <groupId>com.aventstack</groupId>
            <artifactId>extentreports</artifactId>
            <version>${extentreports.version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>${jsoup.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>5.2.5</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.11.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.languagetool</groupId>
            <artifactId>language-en</artifactId>
            <version>${languagetool.version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <dependency>
            <groupId>com.deque.html.axe-core</groupId>
            <artifactId>playwright</artifactId>
            <version>${axe-playwright.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler.version}</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire.version}</version>
                <configuration>
                    <systemPropertyVariables>
                        <net.bytebuddy.experimental>true</net.bytebuddy.experimental>
                    </systemPropertyVariables>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <!-- Keep this for development testing running 'mvn javafx:run' -->
                    <mainClass>com.acxiom.emailaudit.gui.AuditApplication</mainClass>
                </configuration>
            </plugin>

            <!-- UNIFIED SINGLE ASSEMBLY PLUGIN DECLARATION -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${maven-assembly.version}</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <!-- Hardcoded fixed launcher that completely bypasses JavaFX modularity restrictions -->
                            <mainClass>com.acxiom.emailaudit.gui.AppLauncher</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>